k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-js-sample-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-js
  template:
    metadata:
      labels:
        app: node-js
    spec:
      containers:
      - name: node-js-sample
        image: aditivarade/node-js-sample:1.0
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: node-js-storage
          mountPath: /usr/src/app/data
      volumes:
      - name: node-js-storage
        persistentVolumeClaim:
          claimName: node-js-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: node-js-sample-service
spec:
  type: NodePort
  selector:
    app: node-js
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30007
